--- a/indexfetch.html
+++ b/indexfetch.html
@@ -2,13 +2,13 @@
 
   <head>
 
-
-  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
   <style>
     body
     {
-      background-color: black;
+      background-color: #2a3990;
       width: 100%;
       height: 100%;
       padding: 0;
@@ -29,15 +29,15 @@
       margin-top: -50px;
     }
     h1 {
-      font-family: 'Josefin Sans', sans-serif;
+      font-family: 'Pacifico', sans-serif;
       font-weight: 300;
       font-size: 80px;
       padding: 0;
       margin: 0;
     }
     h2 {
-      font-family: 'Josefin Sans', sans-serif;
-      font-weight: 400;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 200;
       font-size: 30px;
       margin: 10;
     }
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div class="center-div">
-    <h1> MERLIN </h1>
+    <h1> Fetch </h1>
     <h2> Onboarding Staff & Offshoring Made Easy</h2>
   </div>
 </body>
