--- a/indexwhite.html
+++ b/indexwhite.html
@@ -8,7 +8,7 @@
   <style>
     body
     {
-      background-color: black;
+      background-color: #f9f9f9;
       width: 100%;
       height: 100%;
       padding: 0;
@@ -23,7 +23,7 @@
       bottom: 0;
       left: 0;
       text-align: center;
-      color: white;
+      color: black;
       vertical-align: middle;
       top: 50%;
       margin-top: -50px;
