--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="center-div">
     <h1> MERLIN </h1>
-    <h2> Onboarding Staff & Offshoring Made Easy</h2>
+    <h2> Onboarding & Offshoring</h2>
   </div>
 </body>
 
