--- a/indexfetch.html
+++ b/indexfetch.html
@@ -46,7 +46,7 @@
 <body>
   <div class="center-div">
     <h1> Fetch </h1>
-    <h2> Onboarding Staff & Offshoring Made Easy</h2>
+    <h2> Better Employee Onboarding</h2>
   </div>
 </body>
 
