--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
   <div class="center-div">
     <h1> MERLIN </h1>
-    <h2> Onboarding magically simple</h2>
+    <h2> Onboarding thats simply magical</h2>
     <p> Sign Up for Early Access Invite </p>
     <form action="//startuppilots.us12.list-manage.com/subscribe/post?u=bec57b6339bfe0d6ca96c1c8d&amp;id=a3a99f36ab" method="post"
       id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
