--- a/index.html
+++ b/index.html
@@ -8367,7 +8367,7 @@
   <link href="/modules/core/client/img/favicons/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <meta name="theme-color" content="#ffffff">
   <!-- Custom Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
 
@@ -8376,7 +8376,7 @@
   <link rel="stylesheet" href="lib/angular-material/angular-material.css">
   <link rel="stylesheet" href="modules/core/client/css/core.css">
   <link rel="stylesheet" href="modules/users/client/css/users.css">
-  <script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript">var switchTo5x=true;</script>
+  <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">var switchTo5x=true;</script>
 
 </head>
 
