--- a/outsourcing.html
+++ b/outsourcing.html
@@ -8346,20 +8346,20 @@
 
   <!-- Semantic META -->
   <meta name="keywords" content="mongodb, express, angularjs, node.js, mongoose, passport">
-  <meta name="description" content="API system for use with the Merlin OnboardingExtensions">
+  <meta name="description" content="Magically Simple Offshoring Solution">
 
   <!-- Facebook META -->
   <meta property="fb:app_id" content="">
   <meta property="og:site_name" content="Merlin Onboarding">
   <meta property="og:title" content="Merlin Onboarding">
-  <meta property="og:description" content="API system for use with the Merlin OnboardingExtensions">
+  <meta property="og:description" content="Magically Simple Offshoring Solution">
   <meta property="og:url" content="http://www.merlinonboarding.co">
   <meta property="og:image" content="/img/brand/logo.png">
   <meta property="og:type" content="website">
 
   <!-- Twitter META -->
   <meta name="twitter:title" content="Merlin Onboarding">
-  <meta name="twitter:description" content="API system for use with the Merlin OnboardingExtensions">
+  <meta name="twitter:description" content="Magically Simple Offshoring Solution">
   <meta name="twitter:url" content="http://www.merlinonboarding.com">
   <meta name="twitter:image" content="/img/brand/logo.png">
 
