--- a/index.html
+++ b/index.html
@@ -8345,21 +8345,21 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- Semantic META -->
-  <meta name="keywords" content="mongodb, express, angularjs, node.js, mongoose, passport">
+  <meta name="keywords" content="onboarding, merlin, offshoring, merlin onborading, new hires, LMS">
   <meta name="description" content="API system for use with the Merlin OnboardingExtensions">
 
   <!-- Facebook META -->
   <meta property="fb:app_id" content="">
   <meta property="og:site_name" content="Merlin Onboarding">
   <meta property="og:title" content="Merlin Onboarding">
-  <meta property="og:description" content="API system for use with the Merlin OnboardingExtensions">
+  <meta property="og:description" content="Magically Simple Onboarding">
   <meta property="og:url" content="http://www.merlinonboarding.co">
   <meta property="og:image" content="/img/brand/logo.png">
   <meta property="og:type" content="website">
 
   <!-- Twitter META -->
   <meta name="twitter:title" content="Merlin Onboarding">
-  <meta name="twitter:description" content="API system for use with the Merlin OnboardingExtensions">
+  <meta name="twitter:description" content="Magically Simple Onboarding">
   <meta name="twitter:url" content="http://www.merlinonboarding.com">
   <meta name="twitter:image" content="/img/brand/logo.png">
 
