--- a/index.html
+++ b/index.html
@@ -8391,6 +8391,8 @@
       <section ui-view></section>
     </md-content>
   </section>
+  <a href="https://mixpanel.com/f/partner" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
+
 
   <!--Embedding The User Object-->
   <script type="text/javascript">
@@ -8399,15 +8401,16 @@ var user = "";
 
   <!--Application JavaScript Files-->
   <script type="text/javascript" src="lib/angular/angular.min.js"></script><script type="text/javascript" src="lib/angular-resource/angular-resource.min.js"></script>
+  <script type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script><script type="text/javascript"
+    src="lib/angular-messages/angular-messages.min.js"></script><script type="text/javascript" src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script
-    type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script><script type="text/javascript" src="lib/angular-messages/angular-messages.min.js"></script><script type="text/javascript"
-      src="lib/angular-ui-router/release/angular-ui-router.min.js"></script><script type="text/javascript" src="lib/angular-ui-utils/ui-utils.min.js"></script>
+    type="text/javascript" src="lib/angular-ui-utils/ui-utils.min.js"></script>
+    <script type="text/javascript" src="lib/ng-file-upload/ng-file-upload.min.js"></script><script type="text/javascript"
+      src="lib/angular-aria/angular-aria.min.js"></script><script type="text/javascript" src="lib/angular-material/angular-material.min.js"></script>
     <script
-      type="text/javascript" src="lib/ng-file-upload/ng-file-upload.min.js"></script><script type="text/javascript" src="lib/angular-aria/angular-aria.min.js"></script><script type="text/javascript"
-        src="lib/angular-material/angular-material.min.js"></script><script type="text/javascript" src="lib/owasp-password-strength-test/owasp-password-strength-test.js"></script>
-      <script
-        type="text/javascript" src="dist/application.min.js"></script>
-        <script>
+      type="text/javascript" src="lib/owasp-password-strength-test/owasp-password-strength-test.js"></script>
+      <script type="text/javascript" src="dist/application.min.js"></script>
+      <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
