--- a/index.html
+++ b/index.html
@@ -8391,9 +8391,6 @@
       <section ui-view></section>
     </md-content>
   </section>
-  <a href="https://mixpanel.com/f/partner" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
-
-
   <!--Embedding The User Object-->
   <script type="text/javascript">
 var user = "";
@@ -8422,3 +8419,6 @@ var user = "";
 </script>
 
 </body>
+  <footer>
+  <a href="https://mixpanel.com/f/partner" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
+  </footer>
