Fixed Meta Description

--- a/index.html
+++ b/index.html
@@ -8346,7 +8346,7 @@
 
   <!-- Semantic META -->
   <meta name="keywords" content="onboarding, merlin, offshoring, merlin onborading, new hires, LMS">
-  <meta name="description" content="API system for use with the Merlin OnboardingExtensions">
+  <meta name="description" content="Create magically simple onboarding for your team. Merlin teach your staff inside of the products they actually use.">
 
   <!-- Facebook META -->
   <meta property="fb:app_id" content="">
