--- a/index.html
+++ b/index.html
@@ -8369,7 +8369,7 @@
   <!-- Custom Fonts -->
   <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-  
+
   <!--Application CSS Files-->
 
   <link rel="stylesheet" href="lib/angular-material/angular-material.css">
@@ -8418,6 +8418,6 @@ var user = "";
 </script>
 
 </body>
-  <footer>
+  <footer style="display:none">
   <a href="https://mixpanel.com/f/partner" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
   </footer>
