--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="google-site-verification" content="dppi19eP7j5Se87tzQstWXM2rv4h-RdCaOEI8j95UZ0" />
 
   <!-- Semantic META -->
   <meta name="keywords" content="onboarding, merlin, offshoring, merlin onborading, new hires, LMS">
