--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>Merlin Onboarding</title>
+  <title>Merlin Onboarding (Now renamed Merlin Guides)</title>
   <base href="/">
   <!-- General META -->
   <meta charset="utf-8">
